# pyloros

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  PLAN.md  README.md  lefthook.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/test-support/: Cargo.toml
devdocs/: DECISIONS.md  FUTURE_PLANS.md  INTERNALS.md  LESSONS.md  QUESTIONS.md  SPEC.md  TASKS.md  test-improvements.md
devdocs/lessons/: aws-sigv4-host-header.md  config-livereload.md  curl-http-proxy-env-vars.md  e2e-test-architecture.md  git-report-status-v2.md  nested-claude-code-hangs.md  rcgen-ca-cert-chain.md  reqwest-mitm-proxy-testing.md  rustls-crypto-provider.md
examples/: basic_config.toml
examples/docker-compose/: compose.yaml  config.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config.rs  fuzz_pattern_matcher.rs  fuzz_pktline.rs  fuzz_url_pattern.rs
fuzz/seeds/fuzz_config/: git_rules.toml  minimal.toml
fuzz/seeds/fuzz_pattern_matcher/: literal.txt  star_only.txt  wildcard_host.txt  wildcard_path.txt
fuzz/seeds/fuzz_url_pattern/: github_wildcard.txt  websocket.txt  with_port.txt  with_query.txt
scripts/: docker-sandbox.sh  pyloros-bwrap.sh  setup.sh  test-bwrap.sh  test-docker-compose.sh  test-docker-sandbox.sh  test-report.sh
src/: audit.rs  config.rs  error.rs  lib.rs  main.rs  test_support.rs
src/filter/: credentials.rs  lfs.rs  matcher.rs  mod.rs  pktline.rs  rules.rs  sigv4.rs
tests/: audit_log_test.rs  aws_credential_test.rs  binary_test.rs  cli_test.rs  config_reload_test.rs  credential_injection_test.rs  e2e_test.rs  filter_test.rs  git_lfs_test.rs  git_rules_test.rs  git_smart_http_test.rs  http2_test.rs  logging_test.rs  plain_http_test.rs  proxy_auth_test.rs  proxy_basic_test.rs  proxy_forwarding_test.rs  tls_test.rs  unix_socket_test.rs  websocket_test.rs
(+14 files in other folders)
