[package]
name = "pyloros"
version = "0.1.0"
edition = "2021"
description = "A filtering HTTPS proxy for agent network access control"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
rustls = "0.23"
tokio-rustls = "0.26"
rcgen = { version = "0.13", features = ["x509-parser"] }
time = "0.3"
webpki-roots = "0.26"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive"] }
lru = "0.12"
rustls-pemfile = "2"
serde_json = "1"
ring = "0.17"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tokio-test = "0.4"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
wiremock = "0.6"
